deployment_v1.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centralledger
  labels:
    app: centralledger
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # exeed the replicas by 1 pod
      # maxUnavailable: 25% #25% of pods can be unavailable during an upgrade
  selector:
    matchLabels:
      app: centralledger
  template:
    metadata:
      labels:
        app: centralledger
    spec:
      containers:
      - name: central-ledger
        image: mojaloop/central-ledger:v10.1.1
