deployment_simulator.yaml
---
# Source: mojaloop-simulator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mojaloop-simulator-sim-dfspa-backend
  labels:
    app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-backend
    app.kubernetes.io/instance: mojaloop-simulator
    app.kubernetes.io/version: "10.4.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mojaloop-simulator-10.4.0
spec:
   type: ClusterIP
   ports:
     - port: 3000
       protocol: TCP
       name: simapi
       targetPort: simapi
     - port: 3002
       protocol: TCP
       name: reportapi
       targetPort: reportapi
     - port: 3003
       protocol: TCP
       name: testapi
       targetPort: testapi
   selector:
      app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-backend
      app.kubernetes.io/instance: mojaloop-simulator
---
# Source: mojaloop-simulator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mojaloop-simulator-sim-dfspa-scheme-adapter
  labels:
    app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-scheme-adapter
    app.kubernetes.io/instance: mojaloop-simulator
    app.kubernetes.io/version: "10.4.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mojaloop-simulator-10.4.0
spec:
   type: ClusterIP
   ports:
     - port: 4000
       protocol: TCP
       name: inboundapi
       targetPort: inboundapi
     - port: 4001
       protocol: TCP
       name: outboundapi
       targetPort: outboundapi
     - port: 4002
       protocol: TCP
       name: testapi
       targetPort: testapi
   selector:
      app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-scheme-adapter
      app.kubernetes.io/instance: mojaloop-simulator
---
# Source: mojaloop-simulator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mojaloop-simulator-sim-dfspa-cache
  labels:
    app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-cache
    app.kubernetes.io/instance: mojaloop-simulator
    app.kubernetes.io/version: "10.4.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mojaloop-simulator-10.4.0
spec:
   type: ClusterIP
   ports:
     - port: 6379
       protocol: TCP
       name: redis
       targetPort: redis
   selector:
      app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-cache
      app.kubernetes.io/instance: mojaloop-simulator
---
# Source: mojaloop-simulator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mojaloop-simulator-sim-dfspa-scheme-adapter
  labels:
    app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-scheme-adapter
    app.kubernetes.io/instance: mojaloop-simulator
    app.kubernetes.io/version: "10.4.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mojaloop-simulator-10.4.0
spec:
  replicas: 
  selector:
    matchLabels:
      app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-scheme-adapter
      app.kubernetes.io/instance: mojaloop-simulator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-scheme-adapter
        app.kubernetes.io/instance: mojaloop-simulator
        app.kubernetes.io/version: "10.4.1"
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: mojaloop-simulator-10.4.0
    spec:
      volumes:
      - name: jws-public-keys
        configMap:
          name: mojaloop-simulator-sim-jws-public-keys
      - name: tls-secrets
        secret:
          secretName: mojaloop-simulator-sim-dfspa-tls-creds
      containers:
      - name: scheme-adapter
        image: "mojaloop/sdk-scheme-adapter:v10.5.0"
        imagePullPolicy: Always
        ports:
          - name: inboundapi
            containerPort: 4000
            protocol: TCP
          - name: outboundapi
            containerPort: 4001
            protocol: TCP
          - name: testapi
            containerPort: 4002
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 4001
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /
            port: 4001
            scheme: HTTP
        volumeMounts:
        - name: jws-public-keys
          mountPath: /jwsVerificationKeys
        - name: tls-secrets
          mountPath: "/secrets/"
        resources:
          null
      imagePullSecrets:
        - name: dock-casa-secret
---
# Source: mojaloop-simulator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mojaloop-simulator-sim-dfspa-backend
  labels:
    app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-backend
    app.kubernetes.io/instance: mojaloop-simulator
    app.kubernetes.io/version: "10.4.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mojaloop-simulator-10.4.0
spec:
  replicas: 
  selector:
    matchLabels:
      app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-backend
      app.kubernetes.io/instance: mojaloop-simulator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-backend
        app.kubernetes.io/instance: mojaloop-simulator
        app.kubernetes.io/version: "10.4.1"
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: mojaloop-simulator-10.4.0
    spec:
      containers:
      - name: backend
        image: "mojaloop/mojaloop-simulator:v10.4.1"
        imagePullPolicy: Always
        ports:
          - name: simapi
            containerPort: 3000 # these are hard-coded in the service
            protocol: TCP
          - name: reportapi
            containerPort: 3002 # these are hard-coded in the service
            protocol: TCP
          - name: testapi
            containerPort: 3003 # these are hard-coded in the service
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
        resources:
          null
        volumeMounts:
        - name: mojaloop-simulator-sim-rules
          mountPath: /rules/
      volumes:
      - name: mojaloop-simulator-sim-rules
        configMap:
          name: mojaloop-simulator-sim-dfspa-rules
      imagePullSecrets:
        - name: dock-casa-secret
---
# Source: mojaloop-simulator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mojaloop-simulator-sim-dfspa-cache
  labels:
    app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-cache
    app.kubernetes.io/instance: mojaloop-simulator
    app.kubernetes.io/version: "10.4.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mojaloop-simulator-10.4.0
spec:
  replicas: 
  selector:
    matchLabels:
      app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-cache
      app.kubernetes.io/instance: mojaloop-simulator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mojaloop-simulator-sim-dfspa-cache
        app.kubernetes.io/instance: mojaloop-simulator
        app.kubernetes.io/version: "10.4.1"
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: mojaloop-simulator-10.4.0
    spec:
      containers:
      - name: cache
        image: "redis:5.0.4-alpine"
        imagePullPolicy: Always
        ports:
        - name: redis
          containerPort: 6379
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - redis-cli ping 5
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - redis-cli ping 5
        resources:
            null
---
# Source: mojaloop-simulator/templates/ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: mojaloop-simulator-sim-simulators
#   labels:
#     app.kubernetes.io/name: simulators
#     app.kubernetes.io/instance: mojaloop-simulator
#     app.kubernetes.io/version: "10.4.1"
#     app.kubernetes.io/managed-by: Helm
#     helm.sh/chart: mojaloop-simulator-10.4.0
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   rules:
#       - host: simulator.local
#         http:
#           paths:
#           - path: /sim/dfspa/outbound(/|$)(.*)
#             backend:
#               serviceName: mojaloop-simulator-sim-dfspa-scheme-adapter
#               servicePort: outboundapi
#           - path: /sim/dfspa/inbound(/|$)(.*)
#             backend:
#               serviceName: mojaloop-simulator-sim-dfspa-scheme-adapter
#               servicePort: inboundapi
#           - path: /sim/dfspa/sdktest(/|$)(.*)
#             backend:
#               serviceName: mojaloop-simulator-sim-dfspa-scheme-adapter
#               servicePort: testapi
#           - path: /sim/dfspa/test(/|$)(.*)
#             backend:
#               serviceName: mojaloop-simulator-sim-dfspa-backend
#               servicePort: testapi
---
# Source: mojaloop-simulator/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mojaloop-simulator-sim-simulators
  labels:
    app.kubernetes.io/name: simulators
    app.kubernetes.io/instance: mojaloop-simulator
    app.kubernetes.io/version: "10.4.1"
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mojaloop-simulator-10.4.0
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
      - host: simulator.local
        http:
          paths:
          - path: /sim/dfspa/outbound/
            backend:
              serviceName: mojaloop-simulator-sim-dfspa-scheme-adapter
              servicePort: outboundapi
          - path: /sim/dfspa/inbound/
            backend:
              serviceName: mojaloop-simulator-sim-dfspa-scheme-adapter
              servicePort: inboundapi
          - path: /sim/dfspa/sdktest/
            backend:
              serviceName: mojaloop-simulator-sim-dfspa-scheme-adapter
              servicePort: testapi
          - path: /sim/dfspa/test/
            backend:
              serviceName: mojaloop-simulator-sim-dfspa-backend
              servicePort: testapi
